# ParaphraseApp

./: .gitignore  README.md  pyproject.toml  requirements.txt  result.json
paraphraseproject/: manage.py
paraphraseproject/api/: urls.py
paraphraseproject/api/API/: resources.py  serializers.py
paraphraseproject/paraphraseproject/: asgi.py  settings.py  urls.py  wsgi.py
paraphraseproject/utils/: __init__.py  generator_paraphrases.py
