[tool.poetry]
name = "paraphraseapp"
version = "0.1.0"
description = ""
authors = ["Deriuhin Serhii <deriuhins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
